# dilivery-app

./: .gitignore  README.md  database.db  main.py  pyproject.toml
app/: alembic.ini  database.db  database.py  db_explorer.py  log.py  main.py  settings.py
app/auth/: models.py  routes.py  schemas.py  user_explorer.py  utils.py
app/cart/: __init__.py  cart_explorer.py  models.py  routes.py  schemas.py  utils.py
app/city/: __init__.py  models.py  routes.py  schema.py
app/food/: __init__.py  models.py  routes.py  schemas.py
app/migrations/: env.py
app/orders/: __init__.py  models.py  order_explorer.py  routes.py  schemas.py  utils.py
app/tests/: conftest.py  fixtures.py  models.py  pytest.ini
app/tests/test_city_app_endpoints/: test_city_endpoints.py
app/tests/test_db_explorer/: test_db_explorer.py  test_user_explorer.py
app/tests/test_endpoints/: test_food_endpoints.py
frontend/: auth_routes.py  shop_routes.py  utils.py
frontend/templates/: auth_login.html  auth_profile.html  base.html  main.html  shop.html
migrations/: env.py
migrations/versions/: 07f76b89513f_init.py  10483489bae6_add_user_table.py  261f3d687c24_add_order_table_update_user_table_user_.py  2af201c17dea_order_fix.py  42c7efd45f8c_add_role_model_update_user_model.py  64f746ca7112_update_user_model_add_full_name_field.py  667460777ba6_update_old_models_add_city_model.py  69545ec0fa8b_fixes.py  9426d388c1a3_update_order_table.py  9b7162cdba8e_add_category_model.py  9d4682cd3e1f_orders_replace_to_cart.py  b617d105ff59_add_order_model.py
static/css/: main.css
(+3 files in other folders)
